@@ -37,6 +37,7 @@ screenshots_DATA = \
 	data/screenshots/cheese-0.1.4.jpg \
 	data/screenshots/cheese-0.2.1.jpg \
 	data/screenshots/cheese-0.2.2.jpg \
+	data/screenshots/cheese-0.3.0.jpg \
 	$(NULL)
 
 imagesdir = $(pagedir)/data/images
