@@ -45,6 +45,26 @@
 
         <div id="left">
 
+          <h2>Screenshots for 0.3.0</h2>
+          <a href="data/screenshots/cheese-0.3.0.jpg">
+            <img src="data/screenshots/cheese-0.3.0.jpg" alt="cheese-0.3.0.jpg" height="300px" />
+          </a>
+          <h2>Screenshots for 0.2.1</h2>
+          <a href="data/screenshots/cheese-0.2.1.jpg">
+            <img src="data/screenshots/cheese-0.2.1.jpg" alt="cheese-0.2.1.jpg" height="300px" />
+          </a>
+          <h2>Screenshots for 0.1.2, 0.1.3</h2>
+          <a href="data/screenshots/cheese-0.1.2.jpg">
+            <img src="data/screenshots/cheese-0.1.2.jpg" alt="cheese-0.1.2.jpg" height="300px" />
+          </a>
+          <h2>Screenshots for 0.1.0</h2>
+          <a href="data/screenshots/cheese-0.1.0.jpg">
+            <img src="data/screenshots/cheese-0.1.0.jpg" alt="cheese-0.1.0.jpg" height="300px" />
+          </a>
+
+        </div>
+        <div id="right">
+
           <h2>Screenshots for 0.2.2, 0.2.3, 0.2.4</h2>
           <a href="data/screenshots/cheese-0.2.2.jpg">
             <img src="data/screenshots/cheese-0.2.2.jpg" alt="cheese-0.2.2.jpg" height="300px" />
@@ -63,22 +83,6 @@
           <h2>Screenshots for pre 0.1.0</h2>
           <a href="data/screenshots/cheese-pre0.1.0.jpg">
             <img src="data/screenshots/cheese-pre0.1.0.jpg" alt="cheese-pre0.1.0.jpg" height="300px" />
-          </a>
-
-        </div>
-        <div id="right">
-
-          <h2>Screenshots for 0.2.1</h2>
-          <a href="data/screenshots/cheese-0.2.1.jpg">
-            <img src="data/screenshots/cheese-0.2.1.jpg" alt="cheese-0.2.1.jpg" height="300px" />
-          </a>
-          <h2>Screenshots for 0.1.2, 0.1.3</h2>
-          <a href="data/screenshots/cheese-0.1.2.jpg">
-            <img src="data/screenshots/cheese-0.1.2.jpg" alt="cheese-0.1.2.jpg" height="300px" />
-          </a>
-          <h2>Screenshots for 0.1.0</h2>
-          <a href="data/screenshots/cheese-0.1.0.jpg">
-            <img src="data/screenshots/cheese-0.1.0.jpg" alt="cheese-0.1.0.jpg" height="300px" />
           </a>
         </div>
 
