@@ -1,5 +1,12 @@
 2007-12-24  daniel g. siegel <dgsiegel@gmail.com>
 
+	* www.gnome.org/projects/cheese/data/screenshots/cheese-0.3.0.jpg,
+	  www.gnome.org/projects/cheese/Makefile.am,
+	  www.gnome.org/projects/cheese/screenshots.html: 
+	  add a screenshot for the 0.3.0 release of cheese
+
+2007-12-24  daniel g. siegel <dgsiegel@gmail.com>
+
 	* www.gnome.org/projects/cheese/download.html,
 	  www.gnome.org/projects/cheese/index.html: 
 	  cheese 0.3.0, yay!
